{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 108,
  "lineage": "56e3c6fd-6d8e-1c76-2b06-f664b099b820",
  "resources": [
    {
      "module": "module.app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:822487065664:vpc/vpc-3d264556",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-83dbb9e8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4980c522",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3d264556",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-6e002805",
            "owner_id": "822487065664",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:targetgroup/hello-world-stage/fe4742b7803cf95d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:listener-rule/app/stage-alb/53d2c170cb0778e6/145e37fa3bcf2059/58f8c57281bed463",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:822487065664:listener-rule/app/stage-alb/53d2c170cb0778e6/145e37fa3bcf2059/58f8c57281bed463",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:listener/app/stage-alb/53d2c170cb0778e6/145e37fa3bcf2059",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.alb.aws_lb.example",
            "module.app.module.alb.aws_lb_listener.http",
            "module.app.module.alb.aws_security_group.alb",
            "module.app.aws_lb_target_group.asg",
            "module.app.data.aws_subnet_ids.default",
            "module.app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:targetgroup/hello-world-stage/fe4742b7803cf95d",
            "arn_suffix": "targetgroup/hello-world-stage/fe4742b7803cf95d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:822487065664:targetgroup/hello-world-stage/fe4742b7803cf95d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hello-world-stage",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-3d264556"
          },
          "dependencies": [
            "module.app.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:loadbalancer/app/stage-alb/53d2c170cb0778e6",
            "arn_suffix": "app/stage-alb/53d2c170cb0778e6",
            "dns_name": "stage-alb-1240672748.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:822487065664:loadbalancer/app/stage-alb/53d2c170cb0778e6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stage-alb",
            "security_groups": [
              "sg-0af0b6651fdca1334"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-a0c405dd"
              },
              {
                "subnet_id": "subnet-e9c7eea5"
              },
              {
                "subnet_id": "subnet-eac54e81"
              }
            ],
            "subnets": [
              "subnet-a0c405dd",
              "subnet-e9c7eea5",
              "subnet-eac54e81"
            ],
            "vpc_id": "vpc-3d264556",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.app.data.aws_subnet_ids.default",
            "module.app.data.aws_vpc.default",
            "module.app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:listener/app/stage-alb/53d2c170cb0778e6/145e37fa3bcf2059",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:822487065664:listener/app/stage-alb/53d2c170cb0778e6/145e37fa3bcf2059",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:822487065664:loadbalancer/app/stage-alb/53d2c170cb0778e6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.alb.aws_lb.example",
            "module.app.module.alb.aws_security_group.alb",
            "module.app.data.aws_subnet_ids.default",
            "module.app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:822487065664:security-group/sg-0af0b6651fdca1334",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af0b6651fdca1334",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stage-alb",
            "name_prefix": "",
            "owner_id": "822487065664",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3d264556"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.app.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:822487065664:security-group/sg-06ca9553dcc9056c3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06ca9553dcc9056c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-stage-instance-security-group",
            "name_prefix": "",
            "owner_id": "822487065664",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-3d264556"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_8080_port_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-81015204",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ca9553dcc9056c3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_80_port_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1951527973",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ca9553dcc9056c3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}